<resources>
    <string name="app_name">HITA</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="input_hint">输入内容…</string>
    <string name="date_format_1">yyyy年M月d日</string>
    <string name="date_format_3">yyyy年M月d日 hh时mm分</string>
    <string name="date_format_2">M月d日</string>
    <string name="date_format_am">上午hh:mm</string>
    <string name="date_format_pm">下午hh:mm</string>
    <string name="yesterday">昨天</string>
    <string name="the_day_before_yesterday">前天</string>
    <string name="date_format_with_prefix">"%s %s"</string>
    <string name="hint_eas_username">统一身份认证账号</string>
    <string name="hint_eas_password">密码</string>
    <string name="hint_eas_login">请登录教务账号以继续</string>
    <string name="login">登录</string>
    <string name="import_timetable">导入课表</string>
    <string name="pick_import_term">选择导入学期</string>
    <string name="timetable_tab_title">第%d周</string>
    <string name="import_success">导入成功</string>
    <string name="import_failed">导入失败</string>
    <string name="button_import">导入</string>
    <string name="no_valid_date">请设置开始日期</string>
    <string name="title_import_timetable">课表导入</string>
    <string name="schedule_list_item_pattern">第%d节课</string>
    <string name="timeline_head_free_title">今日空闲</string>
    <string name="timeline_head_free_subtitle">享受当下！</string>
    <string name="timeline_head_goodnight_title">夜深了</string>
    <string name="timeline_head_goodnight_subtitle">晚安！</string>
    <string name="timeline_head_goodmorning_title">早上好</string>
    <string name="timeline_head_lunch_title">午餐时间</string>
    <string name="timeline_head_lunch_subtitle">去哪吃?</string>
    <string name="timeline_head_dinner_title">晚餐时间</string>
    <string name="timeline_head_dinner_subtitle">去哪吃?</string>
    <string name="timeline_head_normal_title">暂时没有事件</string>
    <string name="timeline_head_normal_subtitle">自由安排</string>
    <string name="timeline_head_finish_title">全部结束</string>
    <string name="timeline_head_finish_subtitle">享受生活吧！</string>
    <string name="timeline_head_nulluser_title">请先登录</string>
    <string name="timeline_head_nulluser_subtitle">登录后享受更多服务</string>
    <string name="timeline_head_nulldata_title">无数据</string>
    <string name="timeline_head_nulldata_subtitle">请创建或导入课表</string>
    <string name="timeline_head_notthisterm_title">假期</string>
    <string name="timeline_head_notthisterm_subtitle">本学期未开始！</string>
    <string name="title_activity_user_profile">ActivityUserProfile</string>
    <string name="shortcut_empty_classroom_short">空教室</string>
    <string name="shortcut_empty_classroom_long">空教室查询</string>
    <string name="shortcut_explore_short">希塔</string>
    <string name="shortcut_explore_long">希塔HITA</string>
    <string name="shortcut_timetable_short">课表</string>
    <string name="shortcut_timetable_long">课程表</string>
    <string name="shortcut_news_short">信息窗</string>
    <string name="shortcut_news_long">信息窗口</string>
    <string name="title_activity_search">ActivitySearch</string>
    <string name="update_dialog_title">有可用更新</string>
    <string name="update_dialog_mes1">新版本</string>
    <string name="update_dialog_mes2">发布时间</string>
    <string name="button_confirm">确定</string>
    <string name="button_cancel">取消</string>
    <string name="guide_1p">欢迎使用HITSZ助手，以下为使用导航</string>
    <string name="guide_1s">您可以点击其他位置跳过导航</string>
    <string name="guide_3p">点击展开抽屉</string>
    <string name="guide_3s">功能都在这啦</string>
    <string name="guide_5p">点击进入日程表</string>
    <string name="guide_5s">加强版课程表</string>
    <string name="guide_6p">这里可以进行搜索</string>
    <string name="guide_6s">HIT全局搜...</string>
    <string name="guide_7p">登录HITSZ助手账号</string>
    <string name="guide_7s">开启精彩体验吧</string>
    <string name="notif_installQQ">请安装QQ后再反馈！</string>
    <string name="drawer_username_null">登录</string>
    <string name="drawer_signature_null">HITSZ助手账号</string>
    <string name="drawer_signature_none">无签名</string>
    <string name="main_drawer_menu_jwts">教务系统</string>
    <string name="main_drawer_menu_ut">大学城内部网</string>
    <string name="main_drawer_menu_info">校园动态</string>
    <string name="main_drawer_menu_search">搜索</string>
    <string name="main_drawer_menu_darkmode">深色模式</string>
    <string name="main_drawer_menu_settings">设置</string>
    <string name="main_drawer_menu_report">意见反馈</string>
    <string name="main_drawer_menu_about">关于HITSZ助手</string>
    <string name="main_drawer_menu_curriculums">课表</string>
    <string name="main_drawer_menu_studyassistant">助手</string>
    <string name="main_drawer_menu_hita">希塔</string>
    <string name="main_drawer_menu_theme">主题</string>
    <string name="punch_success_normal">打卡成功</string>
    <string name="punch_success_happy">打卡成功，祝你开心每一天</string>
    <string name="punch_success_sad">打卡成功，加油呀！</string>
    <string name="load_news_failed">加载新闻失败</string>
    <string name="load_lecture_failed">加载讲座失败</string>
    <string name="load_annouce_failed">加载通知失败</string>
    <string name="punch_failed">打卡失败！</string>
    <string name="maintab_navi">校园</string>
    <string name="maintab_today">今日</string>
    <string name="maintab_events">事务</string>
    <string name="sign_up">注册</string>
    <string name="log_in">登录</string>
    <string name="navi_jw_title">教务功能</string>
    <string name="navi_jw_jw_p">掌上教务</string>
    <string name="navi_jw_jw_s">告别网页</string>
    <string name="navi_jw_emptyclassroom_s">找地方学习</string>
    <string name="navi_jw_xl_s">何时放假</string>
    <string name="navi_jw_xl_p">校历</string>
    <string name="navi_hint_text">长按卡片可以拖动调整次序哦</string>
    <string name="navi_hint_button">知道啦</string>
    <string name="navi_campus_title">校园生活</string>
    <string name="navi_course_resource_title">课程资源</string>
    <string name="navi_course_lookup">查询课程资源</string>
    <string name="navi_course_lookup_sub">在应用内搜索课程资料与 README</string>
    <string name="navi_course_submit_pr">提交课程资料 PR</string>
    <string name="navi_course_submit_pr_sub">只追加新的课程内容，不直接改动原文</string>
    <string name="course_resource_open">查看课程资源</string>
    <string name="course_detail_open">查看课程详情内容</string>
    <string name="course_change_color">换颜色</string>
    <string name="course_resource_contribute">追加课程补充</string>
    <string name="course_resource_title">课程资源</string>
    <string name="course_resource_submit_title">选择课程并追加内容</string>
    <string name="course_resource_hint">输入课程名、课程代码或教师名</string>
    <string name="course_resource_empty">没有找到相关课程资源</string>
    <string name="course_resource_failed">课程资源加载失败</string>
    <string name="course_readme_loading">正在加载 README…</string>
    <string name="course_readme_source">来源：%s</string>
    <string name="course_readme_missing">还没有这门课程的内容，可以点击追加课程内容在临时仓库进行 PR。</string>
    <string name="course_contribution_title">追加课程内容</string>
    <string name="course_contribution_type">追加类型</string>
    <string name="course_contribution_course">子课程</string>
    <string name="course_contribution_section">章节</string>
    <string name="course_contribution_section_hint">填写章节标题（如 考核/考试）</string>
    <string name="course_contribution_teacher">教师</string>
    <string name="course_contribution_teacher_hint">填写教师姓名</string>
    <string name="course_contribution_topic">主题</string>
    <string name="course_contribution_content">内容</string>
    <string name="course_contribution_item_name">条目名称</string>
    <string name="course_contribution_item_name_hint">填写条目名称即可</string>
    <string name="course_contribution_item_name_textbook">教材名称（只需填写名称）</string>
    <string name="course_contribution_item_name_resource">资源名称（只需填写名称）</string>
    <string name="course_contribution_author_name">署名</string>
    <string name="course_contribution_author_link">链接</string>
    <string name="course_contribution_author_date">日期</string>
    <string name="course_contribution_submit">提交追加 PR</string>
    <string name="course_contribution_success">提交成功：%s</string>
    <string name="course_contribution_fill_content">请填写内容</string>
    <string name="course_contribution_fill_author">请填写署名</string>
    <string name="course_contribution_fill_item_name">请填写条目名称</string>
    <string name="course_contribution_pick_type">请选择追加类型</string>
    <string name="course_contribution_pick_course">请选择子课程</string>
    <string name="course_contribution_pick_section">请选择章节</string>
    <string name="course_contribution_pick_teacher">请选择教师</string>
    <string name="course_contribution_pick_date">选择日期</string>
    <string name="course_contribution_mode_teacher_review">授课教师评价</string>
    <string name="course_contribution_mode_section_append">章节补充</string>
    <string name="course_contribution_mode_course_review">子课程评价</string>
    <string name="course_contribution_mode_multi_teacher_review">子课程教师评价</string>
    <string name="course_contribution_mode_multi_section_append">子课程章节补充</string>
    <string name="score_summary_gpa">学分绩</string>
    <string name="score_summary_rank">排名</string>
    <string name="navi_campus_vote_p">态度墙</string>
    <string name="navi_campus_billboard_p">食堂排行</string>
    <string name="navi_mood_greet">Hi, 今天心情如何？</string>
    <string name="navi_mood_title">今日校园心情</string>
    <string name="navi_mood_point">分</string>
    <string name="ade_title">添加课时</string>
    <string name="ade_arrangement">日程</string>
    <string name="ade_ddl">DDL</string>
    <string name="ade_course">课程</string>
    <string name="ade_exam">考试</string>
    <string name="ade_namehint">输入名称…</string>
    <string name="ade_tag2">标签2</string>
    <string name="ade_tag3">标签3</string>
    <string name="ade_pick_subject">选择科目</string>
    <string name="ade_pick_time">设置上课时间段</string>
    <string name="ade_pick_task">处理任务</string>
    <string name="ade_pick_location">选择地点</string>
    <string name="ade_wholeday">全天</string>
    <string name="add_laf_detail_hint">输入详细内容</string>
    <string name="button_post">发布</string>
    <string name="usercenter_sync_autoupload">备份所有数据到服务器</string>
    <string name="usercenter_sync_autoupload_hint">当时间表变更时，APP将自动备份数据</string>
    <string name="usercenter_sync_download">下载云端数据到本地</string>
    <string name="usercenter_sync_download_hint">这将清除本地数据，并置课表为教务课表</string>
    <string name="usercenter_info_bind">认证学号</string>
    <string name="usercenter_info_nick">昵称</string>
    <string name="usercenter_info_signature">个性签名</string>
    <string name="usercenter_info_username">账号</string>
    <string name="usercenter_info_school">学院</string>
    <string name="background_settings_title">自定义背景图片</string>
    <string name="enable_background">启用背景</string>
    <string name="choose_image">选择图片</string>
    <string name="background_transparency">透明度</string>
    <string name="background_blur">毛玻璃效果</string>
    <string name="background_scope_label">应用范围</string>
    <string name="scope_timetable">仅课表页</string>
    <string name="scope_global">全局</string>
    <string name="remove_background">移除背景</string>
    <string name="background_preview">背景预览</string>
    <string name="apply">应用</string>
    <string name="blur_none">无</string>
    <string name="blur_light">轻度</string>
    <string name="blur_medium">中度</string>
    <string name="blur_heavy">重度</string>
    <string name="mode_image">图片</string>
    <string name="mode_color">纯色</string>
    <string name="background_fit_mode">填充方式</string>
    <string name="fit_crop">裁剪</string>
    <string name="fit_fit">适应</string>
    <string name="fit_stretch">拉伸</string>
    <string name="theme_accent_color">主题色</string>
    <string name="theme_auto_from_background">从背景图片提取</string>
    <string name="theme_extracted_colors">提取的背景色</string>
    <string name="exam_memo_add_hint">这是备忘录，提交后保存在本机。长按条目可删除。</string>
    <string name="exam_memo_title_hint">考试/课程名称（必填）</string>
    <string name="exam_memo_date_hint">日期（如 2026-03-10）</string>
    <string name="exam_memo_time_hint">时间（如 09:00-11:00）</string>
    <string name="exam_memo_location_hint">地点</string>
    <string name="exam_memo_type_hint">类型（期中/期末/其他）</string>
</resources>