<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="12dp"
    android:paddingEnd="20dp"
    android:paddingBottom="4dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exam_memo_add_hint"
        android:textColor="?attr/textColorSecondary"
        android:textSize="13sp"
        android:paddingBottom="8dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/memo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exam_memo_title_hint"
        android:inputType="text"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:singleLine="true" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/memo_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exam_memo_date_hint"
        android:inputType="text"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:singleLine="true" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/memo_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exam_memo_time_hint"
        android:inputType="text"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:singleLine="true" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/memo_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exam_memo_location_hint"
        android:inputType="text"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:singleLine="true" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/memo_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exam_memo_type_hint"
        android:inputType="text"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:singleLine="true" />
</LinearLayout>
